--- a/index.html
+++ b/index.html
@@ -14,69 +14,14 @@
   <header>
     <h1>Proyectos Web</h1>
     <h2>Programación y Proyecto de Investigación</h2>
-    <p>Producciones realizadas por estudiantes utilizando HTML, CSS y entornos de desarrollo online.</p>
+    <p>
+      Producciones realizadas por estudiantes utilizando HTML, CSS y entornos de desarrollo online.
+    </p>
   </header>
 
   <main class="projects">
 
     <div class="card">
-      <h3>Página Proyecto</h3>
-      <p>Desarrollo web en Replit</p>
-      <a href="https://replit.com/@TriniAnacleto/pagina-proyecto?v=1" target="_blank">Ver proyecto</a>
-    </div>
+      <h3>Construcción de estereotipos en redes sociales</h3>
+      <p>Juana Supera, Trinidad Anacleto, Malen
 
-    <div class="card">
-      <h3>Proyecto Replit</h3>
-      <p>Programación web colaborativa</p>
-      <a href="https://replit.com/join/gdoodyajcj-luciamartini" target="_blank">Ver proyecto</a>
-    </div>
-
-    <div class="card">
-      <h3>TP Final</h3>
-      <p>CodeSandbox</p>
-      <a href="https://codesandbox.io/p/sandbox/proyecto-tp-final-forked-ljpn7w" target="_blank">Ver proyecto</a>
-    </div>
-
-    <div class="card">
-      <h3>Aplicación Web</h3>
-      <p>Proyecto publicado</p>
-      <a href="https://sg9nrf-5000.csb.app/" target="_blank">Ver proyecto</a>
-    </div>
-
-    <div class="card">
-      <h3>Proyecto Web</h3>
-      <p>Aplicación online</p>
-      <a href="https://v4htqy.csb.app/" target="_blank">Ver proyecto</a>
-    </div>
-
-    <div class="card">
-      <h3>Investigación: Apuestas Online</h3>
-      <p>Proyecto de investigación</p>
-      <a href="https://codesandbox.io/p/sandbox/pagina-web-proyecto-de-investigacion-apustas-online-5m3tvr" target="_blank">Ver proyecto</a>
-    </div>
-
-    <div class="card">
-      <h3>Proyecto Web</h3>
-      <p>CodeSandbox</p>
-      <a href="https://codesandbox.io/p/sandbox/zdt25j" target="_blank">Ver proyecto</a>
-    </div>
-
-    <div class="card">
-      <h3>Aplicación Web</h3>
-      <p>Proyecto publicado</p>
-      <a href="https://h27k6h.csb.app" target="_blank">Ver proyecto</a>
-    </div>
-
-    <div class="card">
-      <h3>Proyecto Replit</h3>
-      <p>Trabajo práctico</p>
-      <a href="https://replit.com/join/opxdskrwfp-mateomastro" target="_blank">Ver proyecto</a>
-    </div>
-
-  </main>
-
-  <footer>
-    <p>Prof. María Cecilia Belhart · Proyectos educativos</p>
-  </footer>
-</body>
-</html>
