--- a/Estereotipos de Belleza y su Impacto en Mujeres y Niñas/index.html
+++ b/Estereotipos de Belleza y su Impacto en Mujeres y Niñas/index.html
@@ -27,7 +27,7 @@
   <header class="hero" id="inicio">
     <div class="hero__content">
       <h1>Proyecto de Investigación</h1>
-      <p><strong>Estereotipos de Belleza y su Impacto en Mujeres y Niñas</strong></p>
+      <p><strong>Estereotipos de Belleza y su Impacto en Mujeres y Niñas 6ºC</strong></p>
       <a class="btn" href="#cap1">Ir al Capítulo I</a>
     </div>
   </header>
