--- a/proyectos/estereotipos-redes/index.html
+++ b/proyectos/estereotipos-redes/index.html
@@ -8,7 +8,7 @@
 <body>
 
   <header>
-    <h1>Investigación: Construcción de estereotipos en redes sociales</h1>
+    <h1>Investigación: Construcción de estereotipos en redes sociales  6ºC</h1>
     <h2>El caso de TikTok en jóvenes de la Generación Z</h2>
   </header>
   
