Add class identifier '6ºC' to project titles

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <main class="projects">
 
     <div class="card">
-      <h3>Construcción de estereotipos en redes sociales</h3>
+      <h3>Construcción de estereotipos en redes sociales 6ºC</h3>
       <p>Juana Supera, Trinidad Anacleto, Malena Castro, Mora Dacal</p>
       <a href="https://b0587216-c52f-4156-981a-06049d2b4d70-00-36izhyxa9ne1u.picard.replit.dev/" target="_blank">
         Ver proyecto
@@ -30,7 +30,7 @@
     </div>
 
     <div class="card">
-      <h3>Estereotipos de Belleza y su Impacto en Mujeres y Niñas</h3>
+      <h3>Estereotipos de Belleza y su Impacto en Mujeres y Niñas 6ºC</h3>
       <p>Lucia Martini, Guillermina Peluso, María Pelicena</p>
       <a href="https://ca0e94e7-95ec-49ee-a25a-b235c2a71781-00-2tiuh01two6k9.riker.replit.dev/" target="_blank">
         Ver proyecto
@@ -38,7 +38,7 @@
     </div>
 
     <div class="card">
-      <h3>Inteligencia Artificial en función de la educación</h3>
+      <h3>Inteligencia Artificial en función de la educación  6ºC</h3>
       <p>Lorenzo Ranalletta, Malik Majluf, Alejo Gonzalez, Tobias Gomis, Valentino Del Gobbo</p>
       <a href="https://v4htqy.csb.app/" target="_blank">
         Ver proyecto
@@ -46,7 +46,7 @@
     </div>
 
     <div class="card">
-      <h3>Las apuestas online y su impacto en los jóvenes</h3>
+      <h3>Las apuestas online y su impacto en los jóvenes 6ºC</h3>
       <p>Joaquin Galvan, Antonio Casas, Mateo Albina, Manuel Perez Albizu, Agustin Benitez Larrain</p>
       <a href="https://5m3tvr.csb.app/" target="_blank">
         Ver proyecto
@@ -54,7 +54,7 @@
     </div>
 
     <div class="card">
-      <h3>Likes, Memes y Tradición: El nuevo rostro del conservadurismo juvenil</h3>
+      <h3>Likes, Memes y Tradición: El nuevo rostro del conservadurismo juvenil 6ºC</h3>
       <p>Facundo Ciancio y Paloma Ponce</p>
       <a href="https://zdt25j.csb.app/" target="_blank">
         Ver proyecto
@@ -62,7 +62,7 @@
     </div>
 
     <div class="card">
-      <h3>Desinterés en la Participación Democrática</h3>
+      <h3>Desinterés en la Participación Democrática 6ºC</h3>
       <p>Pestrin Aymará y Mastrogiorgio Mateo</p>
       <a href="https://d8f483e7-9e58-4b4d-bb73-4a2d9e8b60c1-00-22xtgpyq1113a.spock.replit.dev/" target="_blank">
         Ver proyecto
