Add link to 'Desinterés en la Participación Democrática'

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
     <div class="card">
       <h3>Desinterés en la Participación Democrática 6ºC</h3>
       <p>Pestrin Aymará y Mastrogiorgio Mateo</p>
+      <a href="proyectos/participacion-democratica/" target="_blank">
+  Ver proyecto
+</a>
+
       <a href="https://d8f483e7-9e58-4b4d-bb73-4a2d9e8b60c1-00-22xtgpyq1113a.spock.replit.dev/" target="_blank">
         Ver proyecto
       </a>
