Update project cards in index.html
Removed duplicate project card and added a new project card.

--- a/index.html
+++ b/index.html
@@ -20,14 +20,12 @@
   </header>
 
   <main class="projects">
+<div class="card">
+  <h3>Construcción de estereotipos en redes sociales</h3>
+  <p>Juana Supera, Trinidad Anacleto, Malena Castro, Mora Dacal</p>
+  <a href="https://knxk96.csb.app/" target="_blank">Ver proyecto</a>
+</div>
 
-    <div class="card">
-      <h3>Construcción de estereotipos en redes sociales 6ºC</h3>
-      <p>Juana Supera, Trinidad Anacleto, Malena Castro, Mora Dacal</p>
-      <a href="https://b0587216-c52f-4156-981a-06049d2b4d70-00-36izhyxa9ne1u.picard.replit.dev/" target="_blank">
-        Ver proyecto
-      </a>
-    </div>
 
     <div class="card">
       <h3>Estereotipos de Belleza y su Impacto en Mujeres y Niñas 6ºC</h3>
