Update project cards in index.html
Removed outdated project card and added a new one.

--- a/index.html
+++ b/index.html
@@ -26,14 +26,12 @@
   <a href="https://knxk96.csb.app/" target="_blank">Ver proyecto</a>
 </div>
 
+<div class="card">
+  <h3>Estereotipos de Belleza y su Impacto en Mujeres y Niñas</h3>
+  <p>Lucia Martini, Guillermina Peluso, María Pelicena</p>
+  <a href="https://hw79gq.csb.app/" target="_blank">Ver proyecto</a>
+</div>
 
-    <div class="card">
-      <h3>Estereotipos de Belleza y su Impacto en Mujeres y Niñas 6ºC</h3>
-      <p>Lucia Martini, Guillermina Peluso, María Pelicena</p>
-      <a href="https://ca0e94e7-95ec-49ee-a25a-b235c2a71781-00-2tiuh01two6k9.riker.replit.dev/" target="_blank">
-        Ver proyecto
-      </a>
-    </div>
 
     <div class="card">
       <h3>Inteligencia Artificial en función de la educación  6ºC</h3>
