--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  <img src="img/escudo.png" alt="Escudo del colegio" class="escudo">
   <header>
     <h1>Proyectos Web</h1>
     <h2>Programación y Proyecto de Investigación</h2>
