Refactor header and add introductory section
Updated header structure and added introductory text.

--- a/index.html
+++ b/index.html
@@ -12,13 +12,24 @@
 
 <body>
   <img src="img/escudo.png" alt="Escudo del colegio" class="escudo">
-  <header>
-    <h1>Proyectos Web</h1>
-    <h2>Programación y Proyecto de Investigación</h2>
+  <header class="hero">
+  <div class="hero-text">
+    <h1>Programación y Proyecto de Investigación</h1>
     <p>
-      Producciones realizadas por estudiantes utilizando HTML, CSS y entornos de desarrollo online.
+      Producciones digitales de estudiantes<br>
+      Análisis crítico de tecnología, redes sociales y sociedad.
     </p>
-  </header>
+  </div>
+    <section class="intro">
+  <p>
+    Este sitio reúne proyectos realizados por estudiantes,
+    donde la programación web se combina con la investigación,
+    el pensamiento crítico y la ciudadanía digital.
+  </p>
+</section>
+
+</header>
+
 
   <main class="projects">
 <div class="card">
