Update header and introductory text in index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <img src="img/escudo.png" alt="Escudo del colegio" class="escudo">
   <header class="hero">
   <div class="hero-text">
-    <h1>Programación y Proyecto de Investigación</h1>
+    <h1>Proyecto de Investigación y Programación  </h1>
     <p>
       Producciones digitales de estudiantes<br>
       Análisis crítico de tecnología, redes sociales y sociedad.
@@ -22,15 +22,13 @@
   </div>
     <section class="intro">
   <p>
-    Este sitio reúne proyectos realizados por estudiantes,
-    donde la programación web se combina con la investigación,
+    Este sitio reúne proyectos realizados por estudiantes de Instituto José Manuel Estrada de City Bell,
+    donde la programación web se combina con la investigación de proyectos,
     el pensamiento crítico y la ciudadanía digital.
   </p>
 </section>
 
 </header>
-
-
   <main class="projects">
 <div class="card">
   <h3>Construcción de estereotipos en redes sociales</h3>
