--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 </header>
   <main class="projects">
 <div class="card">
-  <h3>Construcción de estereotipos en redes sociales</h3>
+  <h3>Construcción de estereotipos en redes sociales 6ºC</h3>
   <p>Juana Supera, Trinidad Anacleto, Malena Castro, Mora Dacal</p>
   <a href="https://knxk96.csb.app/" target="_blank">Ver proyecto</a>
 </div>
 
 <div class="card">
-  <h3>Estereotipos de Belleza y su Impacto en Mujeres y Niñas</h3>
+  <h3>Estereotipos de Belleza y su Impacto en Mujeres y Niñas 6ºC</h3>
   <p>Lucia Martini, Guillermina Peluso, María Pelicena</p>
   <a href="https://hw79gq.csb.app/" target="_blank">Ver proyecto</a>
 </div>
