Fix line break formatting in index.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section class="intro">
   <p>
     Este sitio reúne proyectos realizados por estudiantes del Instituto José Manuel Estrada de City Bell,
-    donde <br>la programación web se combina con la investigación de proyectos,
+    donde la programación web se combina  <br>con la investigación de proyectos,
     el pensamiento crítico y la ciudadanía digital.
   </p>
 </section>
