Update footer with new professor names

--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
   </main>
 
   <footer>
-    <p>Prof. María Cecilia Belhart · Proyectos educativos</p>
+    <p>Prof.: Elina Mugni- Vanesa Vidal- Pamela Ferroni- María Cecilia Belhart </p>
+    <p>Proyectos educativos</p>
   </footer>
 </body>
 </html>
