Fix typo in project description text

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="hero-text">
     <h1>Proyecto de Investigación y Programación  </h1>
     <p>
-      Producciones digitales de estudiantes<br>
+      Producciones digitales de estudiantes.<br>
       Análisis crítico de tecnología, redes sociales y sociedad.
     </p>
   </div>
