Refactor footer in index.html for improved styling
Updated footer structure and classes for styling.

--- a/index.html
+++ b/index.html
@@ -77,10 +77,15 @@
 
   </main>
 
-  <footer>
-    <p>Prof.: Elina Mugni- Vanesa Vidal- Pamela Ferroni- María Cecilia Belhart </p>
-    <p>Proyectos educativos</p>
-  </footer>
+<footer class="footer">
+  <p class="footer-profes">
+    Prof.: Elina Mugni · Vanesa Vidal · Pamela Ferroni · María Cecilia Belhart
+  </p>
+  <p class="footer-proyectos">
+    Proyectos educativos
+  </p>
+</footer>
+
 </body>
 </html>
 
