Update project link in index.html

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="card">
       <h3>Likes, Memes y Tradición: El nuevo rostro del conservadurismo juvenil 6ºC</h3>
       <p>Facundo Ciancio y Paloma Ponce</p>
-      <a href="https://zdt25j.csb.app/" target="_blank">
+      <a href="https://t84lfm.csb.app//" target="_blank">
         Ver proyecto
       </a>
     </div>
