Add class and course information to header

--- a/apuestas online/index.html
+++ b/apuestas online/index.html
@@ -23,7 +23,7 @@
 
     <main>
       <section id="inicio" class="card">
-        <h1>Las apuestas online en adolescentes argentinos entre 13 y 18 años: causas, facilitadores y consecuencias</h1>
+        <h1>Las apuestas online en adolescentes argentinos entre 13 y 18 años: causas, facilitadores y consecuencias 6ºB</h1>
         <p>
           Institución: Instituto José Manuel Estrada<br/>
           Curso: 6°B — Ciclo lectivo: 2025<br/>
