--- a/index.html
+++ b/index.html
@@ -74,6 +74,16 @@
         Ver proyecto
       </a>
     </div>
+    <div class="card">
+  <h3>Las apuestas online y su impacto en los jóvenes 6°C</h3>
+  <p>Joaquín Galván, Antonio Casas, Mateo Albina, Manuel Pérez Albizu, Agustín Benítez Larraín</p>
+  <a 
+    href="https://codepen.io/Francisco-Banno/pen/LEGvMYP" 
+    target="_blank" 
+    class="btn">
+    Ver proyecto
+  </a>
+</div>
 
   </main>
 
