Update project card details in index.html

--- a/index.html
+++ b/index.html
@@ -74,16 +74,20 @@
         Ver proyecto
       </a>
     </div>
-    <div class="card">
-  <h3>Las apuestas online y su impacto en los jóvenes 6°C</h3>
-  <p>Joaquín Galván, Antonio Casas, Mateo Albina, Manuel Pérez Albizu, Agustín Benítez Larraín</p>
+   <div class="card">
+  <h3>Las apuestas online en adolescentes argentinos entre 13 y 18 años: causas, facilitadores y consecuencias 6ºB</h3>
+  <p>
+    Tiziano Kruger, Francisco Banno, Tobias Garcia
+  </p>
   <a 
-    href="https://codepen.io/Francisco-Banno/pen/LEGvMYP" 
-    target="_blank" 
-    class="btn">
+    href="https://codepen.io/Francisco-Banno/pen/LEGvMYP"
+    target="_blank"
+    class="btn"
+  >
     Ver proyecto
   </a>
 </div>
+
 
   </main>
 
