Add project card with title and links

--- a/index.html
+++ b/index.html
@@ -87,6 +87,19 @@
     Ver proyecto
   </a>
 </div>
+<div class="card">
+  <h3>Título del proyecto</h3>
+  <p>
+   Estudiantes y pandemia de COVID-19 6ºA </p>
+  <p>Pardo, Tobías – Misson, Mirko</p>
+  <a
+    href="https://a60accd4-9408-4f41-931a-340fbf64ec0d-00-1ticjxec3qgwv.worf.replit.dev/"
+    target="_blank"
+    class="btn"
+  >
+    Ver proyecto
+  </a>
+</div>
 
 
   </main>
