--- a/index.html
+++ b/index.html
@@ -1,118 +1,253 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Proyectos Web</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Las apuestas online en adolescentes argentinos entre 13 y 18 años: causas, facilitadores y consecuencias</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <header>
+      <div class="logo">Proyecto</div>
+      <nav>
+        <ul>
+          <li><a href="#inicio">Inicio</a></li>
+          <li><a href="#introduccion">Introducción</a></li>
+          <li><a href="#marco-teorico">Marco teórico</a></li>
+          <li><a href="#metodologia">Metodología</a></li>
+          <li><a href="#desarrollo">Desarrollo</a></li>
+          <li><a href="#conclusiones">Conclusiones</a></li>
+        </ul>
+      </nav>
+    </header>
 
-<body>
-  <img src="img/escudo.png" alt="Escudo del colegio" class="escudo">
-  <header class="hero">
-  <div class="hero-text">
-    <h1>Proyecto de Investigación y Programación  </h1>
-    <p>
-      Producciones digitales de estudiantes.<br>
-      Análisis crítico de tecnología, redes sociales y sociedad.
-    </p>
-  </div>
-    <section class="intro">
-  <p>
-    Este sitio reúne proyectos realizados por estudiantes del Instituto José Manuel Estrada de City Bell,
-    donde la programación web se combina  <br>con la investigación de proyectos,
-    el pensamiento crítico y la ciudadanía digital.
-  </p>
-</section>
+    <main>
+      <section id="inicio" class="card">
+        <h1>Las apuestas online en adolescentes argentinos entre 13 y 18 años: causas, facilitadores y consecuencias</h1>
+        <p>
+          Institución: Instituto José Manuel Estrada<br/>
+          Curso: 6°B — Ciclo lectivo: 2025<br/>
+          Docente: Vanesa Vidal<br/>
+          Estudiantes: Tiziano Kruger, Francisco Banno, Tobias Garcia
+        </p>
+        <p>
+          Este proyecto investiga por qué adolescentes argentinos de entre 13 y 18 años
+          acceden a apuestas online, qué factores lo facilitan y cuáles son las consecuencias
+          académicas, emocionales, sociales y económicas asociadas.
+        </p>
+      </section>
 
-</header>
-  <main class="projects">
-<div class="card">
-  <h3>Construcción de estereotipos en redes sociales 6ºC</h3>
-  <p>Juana Supera, Trinidad Anacleto, Malena Castro, Mora Dacal</p>
-  <a href="https://knxk96.csb.app/" target="_blank">Ver proyecto</a>
-</div>
+      <section id="introduccion" class="card">
+        <h2>Introducción</h2>
+        <p>
+          En los últimos años, el crecimiento de las plataformas digitales ha transformado
+          profundamente los hábitos de entretenimiento de la sociedad, especialmente entre
+          los adolescentes. Uno de los fenómenos que ha adquirido mayor relevancia es el de
+          las apuestas online, una práctica que, aunque legalmente restringida para menores
+          de edad, se ha vuelto cada vez más accesible y frecuente en jóvenes de entre 13 y 18 años.
+        </p>
+        <p>
+          El objetivo general de este trabajo es conocer los factores que hacen posible y fomentan
+          el uso de estas plataformas dentro de ese grupo etario. Se plantea además identificar
+          el porcentaje de adolescentes que han participado en apuestas online, examinar los
+          facilitadores personales, sociales y tecnológicos, determinar las plataformas y tipos
+          de juego más utilizados y evaluar los efectos negativos en distintos ámbitos.
+        </p>
 
-<div class="card">
-  <h3>Estereotipos de Belleza y su Impacto en Mujeres y Niñas 6ºC</h3>
-  <p>Lucia Martini, Guillermina Peluso, María Pelicena</p>
-  <a href="https://hw79gq.csb.app/" target="_blank">Ver proyecto</a>
-</div>
+        <div id="problema" class="subcard">
+          <h3>Problema</h3>
+          <p>
+            ¿Por qué los adolescentes en Argentina, a pesar de las limitaciones legales, acceden
+            y participan en apuestas online, y qué consecuencias les genera esta práctica?
+          </p>
+        </div>
 
+        <div id="objetivos-de-la-investigacion" class="subcard">
+          <h3>Objetivos</h3>
+          <h4>General</h4>
+          <p>Conocer los factores que posibilitan y fomentan las apuestas online entre adolescentes argentinos de 13 a 18 años.</p>
 
-    <div class="card">
-      <h3>Inteligencia Artificial en función de la educación  6ºC</h3>
-      <p>Lorenzo Ranalletta, Malik Majluf, Alejo Gonzalez, Tobias Gomis, Valentino Del Gobbo</p>
-      <a href="https://v4htqy.csb.app/" target="_blank">
-        Ver proyecto
-      </a>
-    </div>
+          <h4>Específicos</h4>
+          <ul>
+            <li>Identificar la frecuencia de participación y la edad promedio de inicio.</li>
+            <li>Describir las vías de acceso (plataformas, billeteras virtuales, cuentas de terceros).</li>
+            <li>Analizar el rol de influencers, publicidad y pares como facilitadores.</li>
+            <li>Evaluar efectos en rendimiento escolar, estado emocional, relaciones sociales y economía personal.</li>
+          </ul>
+        </div>
 
-    <div class="card">
-      <h3>Las apuestas online y su impacto en los jóvenes 6ºC</h3>
-      <p>Joaquin Galvan, Antonio Casas, Mateo Albina, Manuel Perez Albizu, Agustin Benitez Larrain</p>
-      <a href="https://5m3tvr.csb.app/" target="_blank">
-        Ver proyecto
-      </a>
-    </div>
+        <div id="hipotesis" class="subcard">
+          <h3>Hipótesis</h3>
+          <p>
+            A pesar de las regulaciones legales que prohíben el acceso de menores a plataformas
+            de apuestas online, existe una participación creciente de adolescentes (13–18 años)
+            favorecida por: (1) fácil acceso tecnológico, (2) normalización social a través de
+            influencers y publicidad, y (3) controles de verificación insuficientes en las plataformas.
+          </p>
+        </div>
 
-    <div class="card">
-      <h3>Likes, Memes y Tradición: El nuevo rostro del conservadurismo juvenil 6ºC</h3>
-      <p>Facundo Ciancio y Paloma Ponce</p>
-      <a href="https://t84lfm.csb.app//" target="_blank">
-        Ver proyecto
-      </a>
-    </div>
+        <div id="justificacion" class="subcard">
+          <h3>Justificación</h3>
+          <p>
+            Comprender este fenómeno es clave para diseñar estrategias de prevención, educación digital
+            y políticas públicas que reduzcan riesgos para la salud emocional y económica de adolescentes.
+            El estudio aporta datos empíricos locales y propone líneas de intervención que combinan
+            regulación, fiscalización y educación en entornos escolares y familiares.
+          </p>
+        </div>
+      </section>
 
-    <div class="card">
-      <h3>Desinterés en la Participación Democrática 6ºC</h3>
-      <p>Pestrin Aymará y Mastrogiorgio Mateo</p>
-       <a href="https://d8f483e7-9e58-4b4d-bb73-4a2d9e8b60c1-00-22xtgpyq1113a.spock.replit.dev/" target="_blank">
-        Ver proyecto
-      </a>
-    </div>
-   <div class="card">
-  <h3>Las apuestas online en adolescentes argentinos entre 13 y 18 años: causas, facilitadores y consecuencias 6ºB</h3>
-  <p>
-    Tiziano Kruger, Francisco Banno, Tobias Garcia
-  </p>
-  <a 
-    href="https://codepen.io/Francisco-Banno/pen/LEGvMYP"
-    target="_blank"
-    class="btn"
-  >
-    Ver proyecto
-  </a>
-</div>
-<div class="card">
-  <h3>Título del proyecto</h3>
-  <p>
-   Estudiantes y pandemia de COVID-19 6ºA </p>
-  <p>Pardo, Tobías – Misson, Mirko</p>
-  <a
-    href="https://a60accd4-9408-4f41-931a-340fbf64ec0d-00-1ticjxec3qgwv.worf.replit.dev/"
-    target="_blank"
-    class="btn"
-  >
-    Ver proyecto
-  </a>
-</div>
+      <section id="marco-teorico" class="card">
+        <h2>Marco teórico</h2>
 
+        <div id="antecedentes" class="subcard">
+          <h3>Antecedentes</h3>
+          <p>
+            El incremento de las apuestas online está vinculado a la expansión del acceso a Internet,
+            el uso de dispositivos móviles y la masificación de billeteras virtuales. Investigaciones
+            internacionales y locales indican que la publicidad digital, la presencia de influencers
+            y la similitud de mecánicas entre videojuegos y plataformas de apuestas favorecen la normalización
+            de estas conductas entre jóvenes.
+          </p>
+          <p>
+            Estudios de CONICET, UNICEF y universidades argentinas muestran preocupación por el impacto
+            del juego online en poblaciones vulnerables. A nivel normativo, la Ley Nacional N.º 25.295
+            prohíbe el acceso a juegos de azar a menores de 18 años y ENACOM emitió lineamientos para restringir
+            publicidad dirigida a menores.
+          </p>
+        </div>
 
-  </main>
+        <div id="conceptos" class="subcard">
+          <h3>Definición de conceptos</h3>
 
-<footer class="footer">
-  <p class="footer-profes">
-    Prof.: Elina Mugni · Vanesa Vidal · Pamela Ferroni · María Cecilia Belhart
-  </p>
-  <p class="footer-proyectos">
-    Proyectos educativos
-  </p>
-</footer>
+          <h4>Accesibilidad tecnológica</h4>
+          <p>
+            Disponibilidad de dispositivos con conexión permanente a internet y utilización de billeteras
+            virtuales (Mercado Pago, Ualá, Lemoncash, etc.) que facilitan la transferencia de fondos y
+            evitan controles presenciales.
+          </p>
 
-</body>
+          <h4>Normalización y marketing</h4>
+          <p>
+            La promoción de apuestas por influencers, streamers y figuras deportivas construye un marco
+            cultural en el que apostar aparece como una acción habitual, de entretenimiento y asociada al éxito.
+          </p>
+
+          <h4>Vulnerabilidad adolescente</h4>
+          <p>
+            Rasgos propios de la etapa (búsqueda de recompensa inmediata, presión de pares, maduración
+            incompleta de la corteza prefrontal) aumentan la propensión a conductas impulsivas y riesgosas.
+          </p>
+        </div>
+      </section>
+
+      <section id="metodologia" class="card">
+        <h2>Metodología</h2>
+        <p>
+          Enfoque mixto (cuantitativo y cualitativo). Diseño exploratorio-descriptivo con técnicas de
+          triangulación: encuestas estructuradas, entrevistas semiestructuradas y análisis documental de
+          contenido publicitario y marcos regulatorios.
+        </p>
+
+        <div id="tipo" class="subcard">
+          <h3>Tipo de investigación</h3>
+          <p>Exploratorio-descriptivo: relevar prácticas actuales y construir una primera aproximación empírica sobre la magnitud y características del fenómeno.</p>
+        </div>
+
+        <div id="unidad" class="subcard">
+          <h3>Unidad de análisis</h3>
+          <p>Adolescentes escolarizados de entre 13 y 18 años de instituciones seleccionadas (City Bell y alrededores).</p>
+        </div>
+
+        <div id="recoleccion" class="subcard">
+          <h3>Técnicas e instrumentos de recolección de datos</h3>
+          <ul>
+            <li>Encuestas anónimas estructuradas (frecuencia, edad de inicio, plataformas, uso de billeteras).</li>
+            <li>Entrevistas semiestructuradas con adolescentes voluntarios para profundizar motivaciones y efectos.</li>
+            <li>Análisis documental de publicidad y normativa (ENACOM, leyes provinciales, comunicación en redes).</li>
+          </ul>
+        </div>
+      </section>
+
+      <section id="desarrollo" class="card">
+        <h2>Desarrollo — Informe de trabajo de campo</h2>
+
+        <div id="contexto" class="subcard">
+          <h3>Primera instancia de trabajo de campo (22 y 23 de septiembre de 2025)</h3>
+          <p>
+            Se encuestaron anónimamente a 30 estudiantes (16–17/18 años) en la Institución José Manuel Estrada.
+            Además, se realizaron 3 entrevistas personales a voluntarios.
+          </p>
+          <p>
+            Resultados preliminares: 40% de los encuestados había apostado al menos una vez en el último año,
+            principalmente en aplicaciones de apuestas deportivas y casinos online. Entre quienes apostaban, el 60%
+            utilizaba billeteras virtuales y la edad promedio de inicio fue de 15 años. Muchos indicaron haber
+            comenzado durante la pandemia por aburrimiento o influencia de amigos.
+          </p>
+          <p>
+            Observaciones metodológicas: reforzar anonimato, ampliar la muestra y explorar verificaciones de edad
+            en plataformas.
+          </p>
+        </div>
+
+        <div id="articulacion" class="subcard">
+          <h3>Segunda instancia de trabajo de campo (1–7 de octubre de 2025)</h3>
+          <p>
+            Ampliación a tres instituciones (Instituto José Manuel Estrada, Colegio Monseñor Esquiú y Colegio San José Obrero).
+            Se encuestaron 45 estudiantes (4° a 6° año) y se realizaron 8 entrevistas semiestructuradas.
+          </p>
+          <p>
+            Hallazgos: 42% afirmó haber apostado alguna vez en línea; edad promedio de inicio entre 15 y 16 años.
+            Vías de acceso reportadas: amigos/compañeros (63%), redes sociales/influencers (27%), familiares/adultos (10%).
+            El 91% apuesta desde el celular; el 79% utiliza billeteras virtuales; 21% usa cuentas de terceros.
+          </p>
+          <p>
+            Motivaciones principales: deseo de ganar dinero fácil, influencia del grupo y exposición a contenidos en redes.
+            Se reportaron distracciones escolares, pérdidas económicas significativas y sentimientos de ansiedad o frustración al perder.
+          </p>
+        </div>
+
+        <div id="resultados" class="subcard">
+          <h3>Resultados y afirmaciones</h3>
+          <ul>
+            <li>La participación en apuestas online entre adolescentes es relevante (~40–42% en nuestras muestras locales).</li>
+            <li>La pandemia y el confinamiento actuaron como factor facilitador (mayor tiempo en pantalla, búsqueda de distracción).</li>
+            <li>Las billeteras virtuales y las cuentas de terceros permiten eludir controles de edad en muchas ocasiones.</li>
+            <li>Influencers y publicidad en redes contribuyen a la normalización del fenómeno.</li>
+            <li>Consecuencias observadas: deterioro en rendimiento escolar, conflictos familiares, pérdidas económicas y malestar emocional.</li>
+          </ul>
+        </div>
+      </section>
+
+      <section id="conclusiones" class="card">
+        <h2>Conclusiones</h2>
+        <p>
+          El análisis y la recolección de datos permiten afirmar que las apuestas online entre adolescentes
+          argentinos constituyen una problemática en crecimiento, influida por factores tecnológicos, sociales
+          y culturales. La hipótesis inicial —que la accesibilidad digital, la normalización por parte de influencers
+          y la falta de controles fomentan la participación— se verifica en la mayoría de los casos analizados.
+        </p>
+        <p>
+          Si bien no todos los adolescentes que apuestan desarrollan conductas problemáticas, existe un subconjunto
+          con riesgo de agravamiento (pérdidas económicas importantes, ansiedad, impacto escolar). Por ello, las
+          políticas eficaces deben combinar mayor fiscalización de plataformas, controles de verificación de edad robustos,
+          regulación de publicidad dirigida, y programas de prevención y alfabetización digital en escuelas y familias.
+        </p>
+
+        <div id="recuperacion" class="subcard">
+          <h3>Recuperación y análisis de la hipótesis</h3>
+          <p>
+            La hipótesis se confirma mayoritariamente: los datos empíricos coinciden en destacar la conjunción de
+            accesibilidad tecnológica, presión social y debilidades regulatorias como factores centrales. No obstante,
+            la aparición de la adicción depende también de factores individuales y contextuales (impulsividad, apoyo
+            familiar, escolarización).
+          </p>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <p>Proyecto de Investigación | Desarrollado por: Tiziano Kruger, Francisco Banno, Tobias Garcia</p>
+    </footer>
+  </body>
 </html>
-
