Revise project details and clean up HTML structure
Updated project descriptions and removed some project entries.

--- a/index.html
+++ b/index.html
@@ -1,105 +1,71 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Proyectos Web</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <img src="img/escudo.png" alt="Escudo del colegio" class="escudo">
-  <header class="hero">
+
+<header class="hero">
   <div class="hero-text">
-    <h1>Proyecto de Investigación y Programación  </h1>
-    <p>
-      Producciones digitales de estudiantes.<br>
+    <h1>Proyectos Web</h1>
+    <p class="subtitle">
       Análisis crítico de tecnología, redes sociales y sociedad.
     </p>
+    <p class="description">
+      Este sitio reúne proyectos realizados por estudiantes del Instituto José Manuel
+      Estrada de City Bell, donde la programación web se combina con la investigación
+      de proyectos, el pensamiento crítico y la ciudadanía digital.
+    </p>
   </div>
-    <section class="intro">
-  <p>
-    Este sitio reúne proyectos realizados por estudiantes del Instituto José Manuel Estrada de City Bell,
-    donde la programación web se combina  <br>con la investigación de proyectos,
-    el pensamiento crítico y la ciudadanía digital.
-  </p>
-</section>
-
 </header>
-  <main class="projects">
-<div class="card">
-  <h3>Construcción de estereotipos en redes sociales 6ºC</h3>
-  <p>Juana Supera, Trinidad Anacleto, Malena Castro, Mora Dacal</p>
-  <a href="https://knxk96.csb.app/" target="_blank">Ver proyecto</a>
-</div>
 
-<div class="card">
-  <h3>Estereotipos de Belleza y su Impacto en Mujeres y Niñas 6ºC</h3>
-  <p>Lucia Martini, Guillermina Peluso, María Pelicena</p>
-  <a href="https://hw79gq.csb.app/" target="_blank">Ver proyecto</a>
-</div>
+<main class="cards-container">
 
+  <div class="card">
+    <h3>Construcción de estereotipos en redes sociales 6°C</h3>
+    <p>Juana Supera, Trinidad Anacleto, Malena Castro, Mora Dacal</p>
+    <a href="#" target="_blank">Ver proyecto</a>
+  </div>
 
-    <div class="card">
-      <h3>Inteligencia Artificial en función de la educación  6ºC</h3>
-      <p>Lorenzo Ranalletta, Malik Majluf, Alejo Gonzalez, Tobias Gomis, Valentino Del Gobbo</p>
-      <a href="https://v4htqy.csb.app/" target="_blank">
-        Ver proyecto
-      </a>
-    </div>
+  <div class="card">
+    <h3>Estereotipos de Belleza y su Impacto en Mujeres y Niñas 6°C</h3>
+    <p>Lucía Martini, Guillermina Peluso, María Pelicena</p>
+    <a href="#" target="_blank">Ver proyecto</a>
+  </div>
 
-    <div class="card">
-      <h3>Las apuestas online y su impacto en los jóvenes 6ºC</h3>
-      <p>Joaquin Galvan, Antonio Casas, Mateo Albina, Manuel Perez Albizu, Agustin Benitez Larrain</p>
-      <a href="https://5m3tvr.csb.app/" target="_blank">
-        Ver proyecto
-      </a>
-    </div>
+  <div class="card">
+    <h3>Inteligencia Artificial en función de la educación 6°C</h3>
+    <p>Lorenzo Ranalletta, Malik Majluf, Alejo González, Tobías Gomis, Valentino Del Gobbo</p>
+    <a href="#" target="_blank">Ver proyecto</a>
+  </div>
 
-    <div class="card">
-      <h3>Likes, Memes y Tradición: El nuevo rostro del conservadurismo juvenil 6ºC</h3>
-      <p>Facundo Ciancio y Paloma Ponce</p>
-      <a href="https://t84lfm.csb.app//" target="_blank">
-        Ver proyecto
-      </a>
-    </div>
+  <div class="card">
+    <h3>Las apuestas online y su impacto en los jóvenes 6°C</h3>
+    <p>Joaquín Galván, Antonio Casas, Mateo Albina, Manuel Pérez Albizu, Agustín Benítez Larraín</p>
+    <a href="https://codepen.io/Francisco-Banno/full/LEGvMYP" target="_blank">Ver proyecto</a>
+  </div>
 
-    <div class="card">
-      <h3>Desinterés en la Participación Democrática 6ºC</h3>
-      <p>Pestrin Aymará y Mastrogiorgio Mateo</p>
-       <a href="https://d8f483e7-9e58-4b4d-bb73-4a2d9e8b60c1-00-22xtgpyq1113a.spock.replit.dev/" target="_blank">
-        Ver proyecto
-      </a>
-    </div>
-    <div class="card">
-  <h3>Las apuestas online y su impacto en los jóvenes 6°C</h3>
-  <p>Joaquín Galván, Antonio Casas, Mateo Albina, Manuel Pérez Albizu, Agustín Benítez Larraín</p>
-   <div class="card">
-  <h3>Las apuestas online en adolescentes argentinos entre 13 y 18 años: causas, facilitadores y consecuencias 6ºB</h3>
-  <p>
-    Tiziano Kruger, Francisco Banno, Tobias Garcia
-  </p>
-  <a 
-    href="https://codepen.io/Francisco-Banno/pen/LEGvMYP" 
-    target="_blank" 
-    class="btn">
-    href="https://codepen.io/Francisco-Banno/pen/LEGvMYP"
-    target="_blank"
-    class="btn"
-  >
-    Ver proyecto
-  </a>
-</div>
+  <div class="card">
+    <h3>Likes, Memes y Tradición: el nuevo rostro del conservadurismo juvenil 6°C</h3>
+    <p>Facundo Ciancio y Paloma Ponce</p>
+    <a href="#" target="_blank">Ver proyecto</a>
+  </div>
 
+  <div class="card">
+    <h3>Desinterés en la Participación Democrática 6°C</h3>
+    <p>Pestrin Aymará y Mastrogiorgio Mateo</p>
+    <a href="#" target="_blank">Ver proyecto</a>
+  </div>
 
-  </main>
+</main>
 
 <footer class="footer">
   <p class="footer-profes">
-    Prof.: Elina Mugni · Vanesa Vidal · Pamela Ferroni · María Cecilia Belhart
+    Prof.: Elina Mugni · Vanesa Vidal · María Cecilia Belhart
   </p>
   <p class="footer-proyectos">
     Proyectos educativos
@@ -108,3 +74,4 @@
 
 </body>
 </html>
+
