--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <header class="hero">
   <div class="hero-text">
+    <img src="img/escudo.png" alt="Escudo Instituto José Manuel Estrada" class="escudo">
     <h1>Proyectos Web</h1>
     <p class="subtitle">
       Análisis crítico de tecnología, redes sociales y sociedad.
