--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 <footer class="footer">
   <p class="footer-profes">
-    Prof.: Elina Mugni · Vanesa Vidal · María Cecilia Belhart
+    Prof.: Elina Mugni · Vanesa Vidal · Pamela Ferroni · María Cecilia Belhart
   </p>
   <p class="footer-proyectos">
     Proyectos educativos
