--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <img src="img/escudo.png" alt="Escudo Instituto José Manuel Estrada" class="escudo">
     <h1>Proyectos Web</h1>
     <p class="subtitle">
+      Producciones digitales de estudiantes.
       Análisis crítico de tecnología, redes sociales y sociedad.
     </p>
     <p class="description">
