Add line break in subtitle of index.html
Added a line break in the subtitle paragraph.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <img src="img/escudo.png" alt="Escudo Instituto José Manuel Estrada" class="escudo">
     <h1>Proyectos Web</h1>
     <p class="subtitle">
-      Producciones digitales de estudiantes.
+      Producciones digitales de estudiantes.<br>
       Análisis crítico de tecnología, redes sociales y sociedad.
     </p>
     <p class="description">
