Update project links in index.html

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
   <div class="card">
     <h3>Construcción de estereotipos en redes sociales 6°C</h3>
     <p>Juana Supera, Trinidad Anacleto, Malena Castro, Mora Dacal</p>
-    <a href="#" target="_blank">Ver proyecto</a>
+     <a href="proyectos/estereotipos-redes/" target="_blank">Ver proyecto</a>
   </div>
 
   <div class="card">
     <h3>Estereotipos de Belleza y su Impacto en Mujeres y Niñas 6°C</h3>
-    <p>Lucía Martini, Guillermina Peluso, María Pelicena</p>
-    <a href="proyectos/estereotipos-redes/" target="_blank">Ver proyecto</a>
+    <p>Lucía Martini, Guillermina Peluso, María Pelicena</p>   
+    <a href="Estereotipos de Belleza y su Impacto en Mujeres y Niñas 6°C/" target="_blank">
   </div>
 
   <div class="card">
@@ -48,7 +48,7 @@
   <div class="card">
     <h3>Las apuestas online y su impacto en los jóvenes 6°C</h3>
     <p>Joaquín Galván, Antonio Casas, Mateo Albina, Manuel Pérez Albizu, Agustín Benítez Larraín</p>
-    <a href="https://codepen.io/Francisco-Banno/full/LEGvMYP" target="_blank">Ver proyecto</a>
+   <a href="apuestas online/" target="_blank">Ver proyecto</a>
   </div>
 
   <div class="card">
