--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
   <div class="card">
     <h3>Estereotipos de Belleza y su Impacto en Mujeres y Niñas 6°C</h3>
     <p>Lucía Martini, Guillermina Peluso, María Pelicena</p>   
-    <a href="Estereotipos de Belleza y su Impacto en Mujeres y Niñas 6°C/" target="_blank">
+    <a href="Estereotipos de Belleza y su Impacto en Mujeres y Niñas 6°C/" target="_blank">Ver proyecto</a>
   </div>
 
   <div class="card">
     <h3>Inteligencia Artificial en función de la educación 6°C</h3>
     <p>Lorenzo Ranalletta, Malik Majluf, Alejo González, Tobías Gomis, Valentino Del Gobbo</p>
-    <a href="#" target="_blank">Ver proyecto</a>
+    <a href="https://v4htqy.csb.app/" target="_blank">Ver proyecto</a>
   </div>
 
   <div class="card">
@@ -54,7 +54,7 @@
   <div class="card">
     <h3>Likes, Memes y Tradición: el nuevo rostro del conservadurismo juvenil 6°C</h3>
     <p>Facundo Ciancio y Paloma Ponce</p>
-    <a href="#" target="_blank">Ver proyecto</a>
+    <a href="https://zdt25j.csb.app/" target="_blank">Ver proyecto</a>
   </div>
 
   <div class="card">
