--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div class="card">
     <h3>Inteligencia Artificial en función de la educación 6°C</h3>
     <p>Lorenzo Ranalletta, Malik Majluf, Alejo González, Tobías Gomis, Valentino Del Gobbo</p>
-    <a href="#" target="_blank">Ver proyecto</a>
+     <a href="inteligencia-artificial/" target="_blank">Ver proyecto</a>
   </div>
 
   <div class="card">
@@ -54,13 +54,14 @@
   <div class="card">
     <h3>Likes, Memes y Tradición: el nuevo rostro del conservadurismo juvenil 6°C</h3>
     <p>Facundo Ciancio y Paloma Ponce</p>
-    <a href="#" target="_blank">Ver proyecto</a>
+   <a href="conservadurismo-juvenil/" target="_blank">Ver proyecto</a>
   </div>
 
   <div class="card">
     <h3>Desinterés en la Participación Democrática 6°C</h3>
     <p>Pestrin Aymará y Mastrogiorgio Mateo</p>
-    <a href="#" target="_blank">Ver proyecto</a>
+<a href="participacion-democratica/" target="_blank">Ver proyecto</a>
+
   </div>
 
 </main>
@@ -76,3 +77,4 @@
 
 </body>
 </html>
+
