--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <div class="card">
     <h3>Estereotipos de Belleza y su Impacto en Mujeres y Niñas 6°C</h3>
     <p>Lucía Martini, Guillermina Peluso, María Pelicena</p>   
-    <a href="Estereotipos de Belleza y su Impacto en Mujeres y Niñas 6°C/" target="_blank">
+    <a href="Estereotipos de Belleza y su Impacto en Mujeres y Niñas 6°C/" target="_blank">Ver proyecto</a>
   </div>
 
   <div class="card">
@@ -77,4 +77,5 @@
 
 </body>
 </html>
+
 
