--- a/index.html
+++ b/index.html
@@ -36,10 +36,7 @@
   <div class="card">
     <h3>Estereotipos de Belleza y su Impacto en Mujeres y Niñas 6°C</h3>
     <p>Lucía Martini, Guillermina Peluso, María Pelicena</p>   
-       <a href="./Estereotipos%20de%20Belleza%20y%20su%20Impacto%20en%20Mujeres%20y%20Ni%C3%B1as%206%C2%B0C/index.html" target="_blank">
-  Ver proyecto
-</a>
-
+       <a href="<a href="./estereotipos-belleza-6c/" target="_blank"> Ver proyecto</a>
   </div>
 
   <div class="card">
@@ -80,6 +77,7 @@
 
 </body>
 </html>
+
 
 
 
