--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
   <div class="card">
     <h3>Estereotipos de Belleza y su Impacto en Mujeres y Niñas 6°C</h3>
     <p>Lucía Martini, Guillermina Peluso, María Pelicena</p>   
-      <a href="./estereotipos-belleza-6c/" target="_blank"> Ver proyecto</a>
+      <a href="proyectos/estereotipos-belleza-6c/" target="_blank"> Ver proyecto</a>
   </div>
 
   <div class="card">
     <h3>Inteligencia Artificial en función de la educación 6°C</h3>
     <p>Lorenzo Ranalletta, Malik Majluf, Alejo González, Tobías Gomis, Valentino Del Gobbo</p>
-     <a href="inteligencia-artificial/" target="_blank">Ver proyecto</a>
+     <a href="https://v4htqy.csb.app/" target="_blank">Ver proyecto</a>
   </div>
 
   <div class="card">
     <h3>Las apuestas online y su impacto en los jóvenes 6°C</h3>
     <p>Joaquín Galván, Antonio Casas, Mateo Albina, Manuel Pérez Albizu, Agustín Benítez Larraín</p>
-   <a href="apuestas online/" target="_blank">Ver proyecto</a>
+   <a href="proyectos/apuestas-online/" target="_blank">Ver proyecto</a>
   </div>
 
   <div class="card">
@@ -60,7 +60,7 @@
   <div class="card">
     <h3>Desinterés en la Participación Democrática 6°C</h3>
     <p>Pestrin Aymará y Mastrogiorgio Mateo</p>
-<a href="participacion-democratica/" target="_blank">Ver proyecto</a>
+<a href="proyectos/desinteres-en-la-participacion-democratica/" target="_blank">Ver proyecto</a>
 
   </div>
 
@@ -77,6 +77,7 @@
 
 </body>
 </html>
+
 
 
 
