--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <div class="card">
     <h3>Likes, Memes y Tradición: el nuevo rostro del conservadurismo juvenil 6°C</h3>
     <p>Facundo Ciancio y Paloma Ponce</p>
-   <a href="conservadurismo-juvenil/" target="_blank">Ver proyecto</a>
+   <a href="https://zdt25j.csb.app/" target="_blank">Ver proyecto</a>
   </div>
 
   <div class="card">
@@ -77,6 +77,7 @@
 
 </body>
 </html>
+
 
 
 
