--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@
 
   </div>
 
+   <div class="card">
+    <h3>Presiones/emociones en el deporte 6°A</h3>
+    <p>Tadeo Tobia y Pedro Marciano</p>
+<a href="proyectos/presiones-en-el-deporte/" target="_blank">Ver proyecto</a>
+
+  </div>
+
 </main>
 
 <footer class="footer">
@@ -77,6 +84,7 @@
 
 </body>
 </html>
+
 
 
 
