--- a/index.html
+++ b/index.html
@@ -61,16 +61,19 @@
     <h3>Desinterés en la Participación Democrática 6°C</h3>
     <p>Pestrin Aymará y Mastrogiorgio Mateo</p>
 <a href="proyectos/desinteres-en-la-participacion-democratica/" target="_blank">Ver proyecto</a>
-
   </div>
 
    <div class="card">
     <h3>Presiones/emociones en el deporte 6°A</h3>
     <p>Tadeo Tobia y Pedro Marciano</p>
 <a href="proyectos/presiones-en-el-deporte-6a/" target="_blank">Ver proyecto</a>
-
   </div>
-
+ <div class="card">
+    <h3>El consumo del vape y las redes sociales 6°A</h3>
+    <p>Morena Muñoz y Pilar Santos</p>
+<a href="https://pagina-web--sexto1648.replit.app/" target="_blank">Ver proyecto</a>
+  </div>
+  
 </main>
 
 <footer class="footer">
@@ -84,6 +87,7 @@
 
 </body>
 </html>
+
 
 
 
