--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
     <p>Tadeo Tobia y Pedro Marciano</p>
 <a href="proyectos/presiones-en-el-deporte-6a/" target="_blank">Ver proyecto</a>
   </div>
+  
+   <div class="card">
+    <h3>Estudiantes y pandemia de COVID-19 6°A</h3>
+    <p>Pardo, Tobías – Misson, Mirko</p>
+<a href="proyectos/estudiantes-pandemia/" target="_blank">Ver proyecto</a>
+  </div>
+  
  <div class="card">
     <h3>El consumo del vape y las redes sociales 6°A</h3>
     <p>Morena Muñoz y Pilar Santos</p>
@@ -87,6 +94,7 @@
 
 </body>
 </html>
+
 
 
 
